Edits to connect to database and render
