# routes/game.js
@@ -1,5 +1,5 @@
 const routes = require('express').Router();
-const games = require('../controllers/game.js');
+const gamesController = require('../controllers/game.js');
 // console.log erase
 console.log("game.js here");
 
@@ -7,21 +7,22 @@ console.log("game.js here");
 const validation = require('../middleware/validate');
 
 // Retrieve all published Games
-routes.get('/games', games.findAll);
+routes.get('/games', gamesController.getAllGames);
 
 // Retrieve a single Game with id
-routes.get('/games/:game_id', games.findOne);
+routes.get('/games/:game_id', gamesController.getSingleGame);
 
 // Create a new Game
-routes.post('/games', validation.saveGame, games.create);
+routes.post('/games', validation.saveGame, gamesController.createGame);
 
 // Update a Game with id
-routes.put('/:id', validation.saveGame, games.update);
+routes.put('/:id', validation.saveGame, gamesController.updateGame);
 
 // Delete a Game with id
-routes.delete('/:id', games.delete);
+routes.delete('/:id', gamesController.deleteGame);
 
-// Delete all Games
-routes.delete('/', games.deleteAll);
+// Erase
+// // Delete all Games
+// routes.delete('/', gamesController.deleteAll);
 
 module.exports = routes;
