# routes/user.js
@@ -1,5 +1,5 @@
 const routes = require('express').Router();
-const users = require('../controllers/user.js');
+const usersController = require('../controllers/user.js');
 // console.log erase
 console.log("user.js here");
 
@@ -7,21 +7,22 @@ console.log("user.js here");
 const validation = require('../middleware/validate');
 
 // Retrieve all published Users
-routes.get('/users', users.findAll);
+routes.get('/users', usersController.getAllUsers);
 
 // Retrieve a single User with id
-routes.get('/users/:user_id', users.findOne);
+routes.get('/users/:user_id', usersController.getSingleUser);
 
 // Create a new User
-routes.post('/users', validation.saveUser, users.create);
+routes.post('/users', validation.saveUser, usersController.createUser);
 
 // Update a User with id
-routes.put('/:id', validation.saveUser, users.update);
+routes.put('/:id', validation.saveUser, usersController.updateUser);
 
-// Delete a USer with id
-routes.delete('/:id', users.delete);
+// Delete a User with id
+routes.delete('/:id', usersController.deleteUser);
 
-// Delete all Users
-routes.delete('/', users.deleteAll);
+// Erase
+// // Delete all Users
+// routes.delete('/', usersController.deleteAll);
 
 module.exports = routes;
